fix: butons Alignment issues for the About card section

--- a/src/Components/pages/About/about.css
+++ b/src/Components/pages/About/about.css
@@ -12,7 +12,7 @@
 }
 
 .about_para{
-    @apply text-[14px] font-normal leading-6 tracking-[0.3px] text-subPrimary mb-3
+    @apply text-[14px] font-normal leading-6 tracking-[0.3px] text-subPrimary mb-8
 }
 .right_about {
   @apply justify-self-center self-center
